# MAVSDK

./: README.md
examples/fly_mission/: fly_mission
examples/mission/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mission  mission.cpp
examples/mission_1/: CMakeLists.txt  mission_1  mission_1.cpp
examples/off_board/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  off_board  off_board.cpp
examples/offboard_velocity/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/offboard_velocity/battery/: Makefile  battery  cmake_install.cmake
examples/offboard_velocity/calibrate/: Makefile  calibrate  cmake_install.cmake
examples/offboard_velocity/fly_mission/: Makefile  cmake_install.cmake  fly_mission
examples/offboard_velocity/fly_multiple_drones/: Makefile  cmake_install.cmake  fly_multiple_drones
examples/offboard_velocity/fly_qgc_mission/: Makefile  cmake_install.cmake  fly_qgc_mission
examples/offboard_velocity/follow_me/: Makefile  cmake_install.cmake  follow_me
examples/offboard_velocity/ftp_client/: Makefile  cmake_install.cmake  ftp_client
examples/offboard_velocity/ftp_server/: Makefile  cmake_install.cmake  ftp_server
examples/offboard_velocity/geofence_inclusion/: Makefile  cmake_install.cmake  geofence_inclusion
examples/offboard_velocity/gimbal_device_tester/: Makefile  cmake_install.cmake  gimbal_device_tester
examples/takeoff/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  takeoff_and_land  takeoff_land  takeoff_land.cpp
examples/triangle/: CMakeLists.txt  triangle  triangle.cpp
(+21 files in other folders)
